# switchboard-plug-a11y

./: .travis.yml  CMakeLists.txt  HACKING  README.md  meson.build
.github/workflows/: main.yml
data/: a11y.appdata.xml.in  io.elementary.switchboard-plug-a11y.appdata.xml.in  io.elementary.switchboard.a11y.appdata.xml.in  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  accessibility-plug.pot  ae.po  ak.po  an.po  ar.po  as.po  ast.po  ay.po  az.po  ba.po  bg.po  bm.po  bn.po  bo.po  bs.po  ca.po  ch.po  ckb.po  co.po  cs.po  cu.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  fa.po  ff.po  fi.po  fj.po  (+85 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  Categories.vala  Plug.vala  meson.build
src/Backend/: Settings.vala
src/Panes/: Audio.vala  Clicking.vala  Display.vala  General.vala  Keyboard.vala  Pointing.vala  ScreenReader.vala  Typing.vala  Zoom.vala
src/Widgets/: Categories.vala  Label.vala  SettingBox.vala
src/Widgets/Switchboard/: Page.vala  Sidebar.vala  SidebarRow.vala
